Added proper config from command line and cleaned up a bunch

--- a/examples/jsonproxy/package.json
+++ b/examples/jsonproxy/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "express": "~4.9.7",
-    "bluebird": "~2.3.5"
+    "bluebird": "~2.3.5",
+    "nomnom": "~1.8.0"
   }
 }
