--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "xmldom": "^0.1.19",
     "bluebird": "^2.3.4",
-    "request": "git://github.com/mikeal/request.git#master",
+    "request": "^2.47.0",
     "ramda": "^0.7.0"
   }
 }
